--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
-  "name": "plan-b",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  }
+	"name": "plan-b",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^4.29.5",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-separator": "^1.0.3",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@uploadthing/react": "^6.2.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.316.0",
+		"mongodb": "^6.3.0",
+		"mongoose": "^8.1.1",
+		"next": "14.1.0",
+		"query-string": "^8.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.0.1",
+		"svix": "^1.16.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^6.3.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.9",
+		"@types/react": "^18.2.48",
+		"@types/react-dom": "^18.2.18",
+		"autoprefixer": "^10.4.17",
+		"postcss": "^8.4.33",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3"
+	}
 }
