--- a/package.json
+++ b/package.json
@@ -9,32 +9,49 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@clerk/nextjs": "^4.29.5",
+		"@clerk/nextjs": "^4.29.6",
+		"@headlessui/react": "^1.7.18",
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-alert-dialog": "^1.0.5",
+		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@uploadthing/react": "^6.2.2",
+		"axios": "^1.6.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cmdk": "^0.2.1",
+		"fuse.js": "^7.0.0",
 		"lucide-react": "^0.316.0",
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.1.1",
 		"next": "14.1.0",
 		"query-string": "^8.2.0",
 		"react": "^18.2.0",
+		"react-datepicker": "^6.1.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.50.0",
 		"react-icons": "^5.0.1",
 		"svix": "^1.16.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
-		"uploadthing": "^6.3.1"
+		"uploadthing": "^6.3.3",
+		"xml2js": "^0.6.2",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20.11.9",
-		"@types/react": "^18.2.48",
+		"@types/node": "^20.11.16",
+		"@types/react": "^18.2.53",
+		"@types/react-datepicker": "^4.19.5",
 		"@types/react-dom": "^18.2.18",
+		"@types/xml2js": "^0.4.14",
 		"autoprefixer": "^10.4.17",
 		"postcss": "^8.4.33",
+		"tailwind-scrollbar": "^3.0.5",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3"
 	}
