--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.3.3",
+		"vaul": "^0.9.0",
 		"xml2js": "^0.6.2",
 		"zod": "^3.22.4"
 	},
