--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@clerk/nextjs": "^4.29.6",
+		"@clerk/nextjs": "^4.29.7",
 		"@headlessui/react": "^1.7.18",
 		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
@@ -21,7 +21,7 @@
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
-		"@uploadthing/react": "^6.2.2",
+		"@uploadthing/react": "^6.2.4",
 		"axios": "^1.6.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
@@ -29,31 +29,33 @@
 		"fuse.js": "^7.0.0",
 		"lucide-react": "^0.316.0",
 		"mongodb": "^6.3.0",
-		"mongoose": "^8.1.1",
+		"mongoose": "^8.1.3",
 		"next": "14.1.0",
+		"next-themes": "^0.2.1",
 		"query-string": "^8.2.0",
 		"react": "^18.2.0",
 		"react-datepicker": "^6.1.0",
 		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.50.0",
+		"react-hook-form": "^7.50.1",
 		"react-icons": "^5.0.1",
-		"svix": "^1.16.0",
+		"sonner": "^1.4.0",
+		"svix": "^1.18.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
-		"uploadthing": "^6.3.3",
+		"uploadthing": "^6.4.1",
 		"vaul": "^0.9.0",
 		"xml2js": "^0.6.2",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20.11.16",
-		"@types/react": "^18.2.53",
-		"@types/react-datepicker": "^4.19.5",
-		"@types/react-dom": "^18.2.18",
+		"@types/node": "^20.11.19",
+		"@types/react": "^18.2.57",
+		"@types/react-datepicker": "^4.19.6",
+		"@types/react-dom": "^18.2.19",
 		"@types/xml2js": "^0.4.14",
 		"autoprefixer": "^10.4.17",
-		"postcss": "^8.4.33",
-		"tailwind-scrollbar": "^3.0.5",
+		"postcss": "^8.4.35",
+		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3"
 	}
